# teardrop-sdk

./: .gitignore  README.md  pyproject.toml
.github/skills/deep-researcher/: SKILL.md
.github/skills/dev-cycle/: SKILL.md
.github/skills/heal-from-spec-diffs/: SKILL.md
.github/skills/ruthless-critic-verifier/: SKILL.md
.github/skills/speedy-coder/: SKILL.md
.github/workflows/: ci.yml  publish.yml  update-spec.yml
docs/: a2a-delegation.md  admin.md  agent-card.md  agent-runs.md  agent-wallets.md  authentication.md  billing.md  custom-tools.md  development.md  llm-config.md  marketplace.md  mcp-servers.md  memory.md  model-benchmarks.md  models-reference.md  schedules-and-event-triggers.md  wallets.md
spec/: events.schema.json  openapi.json
src/teardrop/: __init__.py  auth.py  client.py  exceptions.py  models.py  streaming.py  webhook_verify.py
src/teardrop/client/: __init__.py  _admin_async.py  _admin_sync.py  _async.py  _core.py  _sync.py  a2a.py  admin.py  agent.py  agent_card.py  auth.py  billing.py  event_triggers.py  llm.py  marketplace.py  mcp.py  memory.py  schedules.py  tools.py  usage.py  wallets.py
src/teardrop/models/: a2a.py  (+15 more)
tests/: conftest.py  test_a2a.py  test_admin_client.py  test_admin_sync_client.py  test_auth.py  test_auth_endpoints.py  test_billing.py  test_client.py  test_custom_tools.py  test_event_triggers.py  test_llm_config.py  test_marketplace.py  test_mcp_servers.py  test_memory.py  test_path_quoting.py  test_schedules.py  test_spec_contract.py  test_streaming.py  test_sync_client.py  test_wallets.py  test_webhook_verify.py
tests/integration/: conftest.py  test_agent_run.py  test_auth_flow.py  test_billing_flow.py  test_event_triggers_flow.py  test_marketplace_e2e.py  test_marketplace_flow.py  test_schedules_flow.py  test_smoke_readonly.py  test_smoke_write.py  test_sync_client_smoke.py
(+5 files in other folders)
